--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 i{
-  cursor: pointer;
+    cursor: pointer;
+}
+h1{
+    color: greenyellow;
+}
+body{
+    background-color: rgb(21, 39, 33);
+    color:black
+}
+h2{
+    color: greenyellow;
+    
+}
+label{
+    color: azure;
 }
